--- a/styles/index.css
+++ b/styles/index.css
@@ -8,9 +8,44 @@ label[for="Doc"] {		background-color: 	#FDF;}
 
 body {
 	background-color: #666;
+}
+h1 {
 	text-align: center;
 }
 h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a {
 	color: inherit;
 	text-decoration: inherit;
+}
+
+label {
+	padding: .5em 1em;
+	font-size: inherit;
+}
+label h1,
+label h2 {
+	font-size: 200%;
+}
+label h3,
+label h4 {
+	font-size: 150%;
+}
+label h5,
+label h6 {
+	font-size: 100%;
+}
+
+label h1,
+label h2,
+label h3,
+label h4,
+label h5,
+label h6,
+label p {
+	font-size: inherit;
+	text-indent: 1em;
+}
+
+label p {
+	padding-left: 1em;
+	padding-right: 1em;
 }
